Доделал документацию. Добавил пару эндпоинтов для удаления статических данных на всякий
